# rust_template

./: .env.sample  Cargo.toml  Dockerfile-dev  Makefile  docker-compose.override.yml  docker-compose.yml
migrations/2023-09-17-184346_create_user_table/: up.sql
src/: main.rs  schema.rs
src/api/: middlewares.rs  mod.rs  repositories.rs  users.rs
src/models/: mod.rs  response.rs  users.rs
src/repository/database/: mod.rs  user.rs
